# baex-web-wasm-tailwindcss

./: .gitignore  AGENTS.md  PLAN.md  README.md  TODOS.md  api-docs.html  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  vitest.config.ts
crates/web-core/: Cargo.toml
crates/web-core/src/: blueprint.rs  component.rs  lib.rs  serialize.rs  signal.rs  state.rs  template.rs  util.rs
crates/web-utils/: Cargo.toml
crates/web-utils/src/: lib.rs
examples/: README.md
examples/primitives/: counter.ts  theme-toggle.ts  todo.ts
examples/tests/: counter.test.ts
scripts/: generate-api-manifest.ts
src/: api-manifest.json  index.css  index.ts
src/app/: app.ts  nav.ts
src/components/: accordion.ts  app.ts  leaflet-map.ts  nav.ts  rag-menu.ts  shiki-codeblock.ts  status-footer.ts  tree-view.ts
src/framework/: baex-element.ts  error-boundary.ts  highlighter.ts  index.ts  ir.ts  signals.ts  template.ts  wasm.d.ts
src/rag/: rag-menu.ts
src/tests/: accordion.test.ts  baex-element.test.ts  baex-nav.test.ts  blueprint.test.ts  error-boundary.test.ts  index.test.ts  integration.test.ts  ir.test.ts  lifecycle.test.ts  modifiers.test.ts  nav.test.ts  setup.ts  signals-advanced.test.ts  signals.test.ts  stress.test.ts  template.test.ts
src/utils/: tabs-storage.ts
src/widgets/: accordion.ts  bottom-drawer.ts  code-block.ts  cube-3d.ts  data-table.ts  form-wizard.ts  leaflet-map.ts  shiki-codeblock.ts  status-modal.ts  tree-item.ts  tree-view.ts
tools/api-doc-gen/: README.md
tools/api-doc-gen/src/: index.ts  parser.ts  renderer.ts  (+1 more)
